доделал слайдер другие услуги + пофиксил баги с кнопками перещелкивания слайдов

--- a/src/views/blocks/cert-swiper.j2
+++ b/src/views/blocks/cert-swiper.j2
@@ -110,13 +110,13 @@
           </div>
         </div>
         <div class="section__card-swiper-buttons section__card-swiper-buttons--desktop-only">
-          <button class="section__swiper-button section__swiper-button--prev" id="section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
+          <button class="section__swiper-button section__swiper-button--prev" id="section-card-swiper-{{sectionCardSwiperCnt}}-prev-desktop" type="button">
             <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
               <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
             </svg>
             <span class="visually-hidden">Перелестнуть назад</span>
           </button>
-          <button class="section__swiper-button section__swiper-button--next" id="section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
+          <button class="section__swiper-button section__swiper-button--next" id="section-card-swiper-{{sectionCardSwiperCnt}}-next-desktop" type="button">
             <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
               <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
             </svg>
