--- a/src/views/blocks/other-services.j2
+++ b/src/views/blocks/other-services.j2
@@ -64,16 +64,43 @@
                 </div>
               </div>
             </div>
+            <div class="section__card-swiper-slide swiper-slide">
+              <div class="other-service-card other-service-card--engineer-systems">
+                <a class="other-service-card__header" href="#!">Инженерные системы</a>
+                <div class="other-service-card__list-wrapper">
+                  <ul class="other-service-card__list">
+                    <li class="other-service-card__item"><a class="other-service-card__item-link" href="#!">СКС</a></li>
+                    <li class="other-service-card__item"><a class="other-service-card__item-link" href="#!">СКУД</a></li>
+                    <li class="other-service-card__item"><a class="other-service-card__item-link" href="#!">Безопасный регион</a></li>
+                    <li class="other-service-card__item"><a class="other-service-card__item-link" href="#!">ВОЛС</a></li>
+                    <li class="other-service-card__item"><a class="other-service-card__item-link" href="#!">Видеонаблюдение</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="section__card-swiper-slide swiper-slide">
+              <div class="other-service-card other-service-card--info-safety">
+                <a class="other-service-card__header" href="#!">Информационная безопасность</a>
+                <div class="other-service-card__list-wrapper">
+                  <ul class="other-service-card__list">
+                    <li class="other-service-card__item"><a class="other-service-card__item-link" href="#!">Двухфакторная аутентификация и управление жизненным циклом средств аутентификации</a></li>
+                    <li class="other-service-card__item"><a class="other-service-card__item-link" href="#!">Менеджер паролей</a></li>
+                    <li class="other-service-card__item"><a class="other-service-card__item-link" href="#!">Повышение осведомленности ИБ</a></li>
+                    <li class="other-service-card__item"><a class="other-service-card__item-link" href="#!">Инфраструктура открытых ключей (PKI)</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <div class="section__card-swiper-buttons section__card-swiper-buttons--desktop-only">
-          <button class="section__swiper-button section__swiper-button--prev" id="section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
+          <button class="section__swiper-button section__swiper-button--prev" id="section-card-swiper-{{sectionCardSwiperCnt}}-prev-desktop" type="button">
             <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
               <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
             </svg>
             <span class="visually-hidden">Перелестнуть назад</span>
           </button>
-          <button class="section__swiper-button section__swiper-button--next" id="section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
+          <button class="section__swiper-button section__swiper-button--next" id="section-card-swiper-{{sectionCardSwiperCnt}}-next-desktop" type="button">
             <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
               <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
             </svg>
