--- a/src/views/pages/service-template.j2
+++ b/src/views/pages/service-template.j2
@@ -47,13 +47,13 @@
           <div class="section__header">
             <h3 class="section__title">Нам доверяют</h3>
             <div class="section__card-swiper-buttons">
-              <button class="section__swiper-button section__swiper-button--prev" id="section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
+              <button class="section__swiper-button section__swiper-button--prev section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
                 <span class="visually-hidden">Перелестнуть назад</span>
               </button>
-              <button class="section__swiper-button section__swiper-button--next" id="section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
+              <button class="section__swiper-button section__swiper-button--next section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
@@ -68,97 +68,97 @@
                 <div class="section__card-swiper-slide swiper-slide">
                   <div class="work-with-us__item">
                     <div class="work-with-us__image-wrapper">
-                      <img src="@img/work-with-us/otkritie-logo.png" alt="Логотип компании Открытие." with="192" height="110">
+                      <img src="@img/work-with-us/otkritie-logo.png" alt="Логотип компании Открытие." width="192" height="110">
                     </div>
                   </div>
                 </div>
                 <div class="section__card-swiper-slide swiper-slide">
                   <div class="work-with-us__item">
                     <div class="work-with-us__image-wrapper">
-                      <img src="@img/work-with-us/rkif-logo.png" alt="Логотип компании Российско-китайский инвестиционный фонд." with="156" height="34">
+                      <img src="@img/work-with-us/rkif-logo.png" alt="Логотип компании Российско-китайский инвестиционный фонд." width="156" height="34">
                     </div>
                   </div>
                 </div>
                 <div class="section__card-swiper-slide swiper-slide">
                   <div class="work-with-us__item">
                     <div class="work-with-us__image-wrapper">
-                      <img src="@img/work-with-us/ascott-group-logo.png" alt="Логотип компании ascott group." with="97" height="57">
+                      <img src="@img/work-with-us/ascott-group-logo.png" alt="Логотип компании ascott group." width="97" height="57">
                     </div>
                   </div>
                 </div>
                 <div class="section__card-swiper-slide swiper-slide">
                   <div class="work-with-us__item">
                     <div class="work-with-us__image-wrapper">
-                      <img src="@img/work-with-us/daf-logo.png" alt="Логотип компании DAF." with="114" height="31">
+                      <img src="@img/work-with-us/daf-logo.png" alt="Логотип компании DAF." width="114" height="31">
                     </div>
                   </div>
                 </div>
                 <div class="section__card-swiper-slide swiper-slide">
                   <div class="work-with-us__item">
                     <div class="work-with-us__image-wrapper">
-                      <img src="@img/work-with-us/logix-pro-logo.png" alt="Логотип компании logixPRO." with="134" height="31">
+                      <img src="@img/work-with-us/logix-pro-logo.png" alt="Логотип компании logixPRO." width="134" height="31">
                     </div>
                   </div>
                 </div>
                 <div class="section__card-swiper-slide swiper-slide">
                   <div class="work-with-us__item">
                     <div class="work-with-us__image-wrapper">
-                      <img src="@img/work-with-us/pk-print-prof-logo.png" alt="Логотип компании ПК ПринтПроф." with="159" height="29">
+                      <img src="@img/work-with-us/pk-print-prof-logo.png" alt="Логотип компании ПК ПринтПроф." width="159" height="29">
                     </div>
                   </div>
                 </div>
                 <div class="section__card-swiper-slide swiper-slide">
                   <div class="work-with-us__item">
                     <div class="work-with-us__image-wrapper">
-                      <img src="@img/work-with-us/energia-logo.png" alt="Логотип компании Энергия." with="156" height="42">
+                      <img src="@img/work-with-us/energia-logo.png" alt="Логотип компании Энергия." width="156" height="42">
                     </div>
                   </div>
                 </div>
                 <div class="section__card-swiper-slide swiper-slide">
                   <div class="work-with-us__item">
                     <div class="work-with-us__image-wrapper">
-                      <img src="@img/work-with-us/mrgroup-logo.png" alt="Логотип компании MR Group." with="143" height="31">
+                      <img src="@img/work-with-us/mrgroup-logo.png" alt="Логотип компании MR Group." width="143" height="31">
                     </div>
                   </div>
                 </div>
                 <div class="section__card-swiper-slide swiper-slide">
                   <div class="work-with-us__item">
                     <div class="work-with-us__image-wrapper">
-                      <img src="@img/work-with-us/stilnie-kuhni-logo.png" alt="Логотип компании Стильные кухни." with="135" height="42">
+                      <img src="@img/work-with-us/stilnie-kuhni-logo.png" alt="Логотип компании Стильные кухни." width="135" height="42">
                     </div>
                   </div>
                 </div>
                 <div class="section__card-swiper-slide swiper-slide">
                   <div class="work-with-us__item">
                     <div class="work-with-us__image-wrapper">
-                      <img src="@img/work-with-us/osnova-logo.png" alt="Логотип группы компаний Основа." with="155" height="45">
+                      <img src="@img/work-with-us/osnova-logo.png" alt="Логотип группы компаний Основа." width="155" height="45">
                     </div>
                   </div>
                 </div>
                 <div class="section__card-swiper-slide swiper-slide">
                   <div class="work-with-us__item">
                     <div class="work-with-us__image-wrapper">
-                      <img src="@img/work-with-us/neometria-logo.png" alt="Логотип компании Неометрия." with="140" height="57">
+                      <img src="@img/work-with-us/neometria-logo.png" alt="Логотип компании Неометрия." width="140" height="57">
                     </div>
                   </div>
                 </div>
                 <div class="section__card-swiper-slide swiper-slide">
                   <div class="work-with-us__item">
                     <div class="work-with-us__image-wrapper">
-                      <img src="@img/work-with-us/trexmer-logo.png" alt="Логотип компании Трехмер." with="137" height="56">
+                      <img src="@img/work-with-us/trexmer-logo.png" alt="Логотип компании Трехмер." width="137" height="56">
                     </div>
                   </div>
                 </div>
               </div>
             </div>
             <div class="section__card-swiper-buttons section__card-swiper-buttons--desktop-only">
-              <button class="section__swiper-button section__swiper-button--prev" id="section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
+              <button class="section__swiper-button section__swiper-button--prev section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
                 <span class="visually-hidden">Перелестнуть назад</span>
               </button>
-              <button class="section__swiper-button section__swiper-button--next" id="section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
+              <button class="section__swiper-button section__swiper-button--next section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
@@ -278,13 +278,13 @@
           <div class="section__header">
             <h3 class="section__title">Используем оборудование вендоров</h3>
             <div class="section__card-swiper-buttons">
-              <button class="section__swiper-button section__swiper-button--prev" id="section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
+              <button class="section__swiper-button section__swiper-button--prev section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
                 <span class="visually-hidden">Перелестнуть назад</span>
               </button>
-              <button class="section__swiper-button section__swiper-button--next" id="section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
+              <button class="section__swiper-button section__swiper-button--next section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
@@ -383,13 +383,13 @@
               </div>
             </div>
             <div class="section__card-swiper-buttons section__card-swiper-buttons--desktop-only">
-              <button class="section__swiper-button section__swiper-button--prev" id="section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
+              <button class="section__swiper-button section__swiper-button--prev section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
                 <span class="visually-hidden">Перелестнуть назад</span>
               </button>
-              <button class="section__swiper-button section__swiper-button--next" id="section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
+              <button class="section__swiper-button section__swiper-button--next section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
@@ -409,13 +409,13 @@
           <div class="section__header">
             <h3 class="section__title">Команда ExaSystems</h3>
             <div class="section__card-swiper-buttons">
-              <button class="section__swiper-button section__swiper-button--prev" id="section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
+              <button class="section__swiper-button section__swiper-button--prev section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
                 <span class="visually-hidden">Перелестнуть назад</span>
               </button>
-              <button class="section__swiper-button section__swiper-button--next" id="section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
+              <button class="section__swiper-button section__swiper-button--next section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
@@ -502,13 +502,13 @@
               </div>
             </div>
             <div class="section__card-swiper-buttons section__card-swiper-buttons--desktop-only">
-              <button class="section__swiper-button section__swiper-button--prev" id="section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
+              <button class="section__swiper-button section__swiper-button--prev section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
                 <span class="visually-hidden">Перелестнуть назад</span>
               </button>
-              <button class="section__swiper-button section__swiper-button--next" id="section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
+              <button class="section__swiper-button section__swiper-button--next section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
