--- a/src/scss/blocks/other-service-card.scss
+++ b/src/scss/blocks/other-service-card.scss
@@ -62,7 +62,7 @@
 }
 
 .other-service-card__list {
-  height: 100%;
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
   gap: 15px;
@@ -96,5 +96,17 @@
 .other-service-card--tcs {
   & .other-service-card__list-wrapper {
     background-image: url("@img/other-service-card-tcs.webp");
+  }
+}
+
+.other-service-card--engineer-systems {
+  & .other-service-card__list-wrapper {
+    background-image: url("@img/other-service-card-engineer-systems.webp");
+  }
+}
+
+.other-service-card--info-safety {
+  & .other-service-card__list-wrapper {
+    background-image: url("@img/other-service-card-info-safety.webp");
   }
 }
