--- a/src/views/blocks/work-with-us.j2
+++ b/src/views/blocks/work-with-us.j2
@@ -5,67 +5,67 @@
       <ul class="work-with-us__list">
         <li class="work-with-us__item">
           <div class="work-with-us__image-wrapper">
-            <img src="@img/work-with-us/otkritie-logo.png" alt="Логотип компании Открытие." with="192" height="110">
+            <img src="@img/work-with-us/otkritie-logo.png" alt="Логотип компании Открытие." width="192" height="110">
           </div>
         </li>
         <li class="work-with-us__item">
           <div class="work-with-us__image-wrapper">
-            <img src="@img/work-with-us/rkif-logo.png" alt="Логотип компании Российско-китайский инвестиционный фонд." with="156" height="34">
+            <img src="@img/work-with-us/rkif-logo.png" alt="Логотип компании Российско-китайский инвестиционный фонд." width="156" height="34">
           </div>
         </li>
         <li class="work-with-us__item">
           <div class="work-with-us__image-wrapper">
-            <img src="@img/work-with-us/ascott-group-logo.png" alt="Логотип компании ascott group." with="97" height="57">
+            <img src="@img/work-with-us/ascott-group-logo.png" alt="Логотип компании ascott group." width="97" height="57">
           </div>
         </li>
         <li class="work-with-us__item">
           <div class="work-with-us__image-wrapper">
-            <img src="@img/work-with-us/damate-logo.png" alt="Логотип компании Damate." with="81" height="70">
+            <img src="@img/work-with-us/damate-logo.png" alt="Логотип компании Damate." width="81" height="70">
           </div>
         </li>
         <li class="work-with-us__item">
           <div class="work-with-us__image-wrapper">
-            <img src="@img/work-with-us/daf-logo.png" alt="Логотип компании DAF." with="114" height="31">
+            <img src="@img/work-with-us/daf-logo.png" alt="Логотип компании DAF." width="114" height="31">
           </div>
         </li>
         <li class="work-with-us__item">
           <div class="work-with-us__image-wrapper">
-            <img src="@img/work-with-us/logix-pro-logo.png" alt="Логотип компании logixPRO." with="134" height="31">
+            <img src="@img/work-with-us/logix-pro-logo.png" alt="Логотип компании logixPRO." width="134" height="31">
           </div>
         </li>
         <li class="work-with-us__item">
           <div class="work-with-us__image-wrapper">
-            <img src="@img/work-with-us/pk-print-prof-logo.png" alt="Логотип компании ПК ПринтПроф." with="159" height="29">
+            <img src="@img/work-with-us/pk-print-prof-logo.png" alt="Логотип компании ПК ПринтПроф." width="159" height="29">
           </div>
         </li>
         <li class="work-with-us__item">
           <div class="work-with-us__image-wrapper">
-            <img src="@img/work-with-us/energia-logo.png" alt="Логотип компании Энергия." with="156" height="42">
+            <img src="@img/work-with-us/energia-logo.png" alt="Логотип компании Энергия." width="156" height="42">
           </div>
         </li>
         <li class="work-with-us__item">
           <div class="work-with-us__image-wrapper">
-            <img src="@img/work-with-us/mrgroup-logo.png" alt="Логотип компании MR Group." with="143" height="31">
+            <img src="@img/work-with-us/mrgroup-logo.png" alt="Логотип компании MR Group." width="143" height="31">
           </div>
         </li>
         <li class="work-with-us__item">
           <div class="work-with-us__image-wrapper">
-            <img src="@img/work-with-us/stilnie-kuhni-logo.png" alt="Логотип компании Стильные кухни." with="135" height="42">
+            <img src="@img/work-with-us/stilnie-kuhni-logo.png" alt="Логотип компании Стильные кухни." width="135" height="42">
           </div>
         </li>
         <li class="work-with-us__item">
           <div class="work-with-us__image-wrapper">
-            <img src="@img/work-with-us/osnova-logo.png" alt="Логотип группы компаний Основа." with="155" height="45">
+            <img src="@img/work-with-us/osnova-logo.png" alt="Логотип группы компаний Основа." width="155" height="45">
           </div>
         </li>
         <li class="work-with-us__item">
           <div class="work-with-us__image-wrapper">
-            <img src="@img/work-with-us/neometria-logo.png" alt="Логотип компании Неометрия." with="140" height="57">
+            <img src="@img/work-with-us/neometria-logo.png" alt="Логотип компании Неометрия." width="140" height="57">
           </div>
         </li>
         <li class="work-with-us__item">
           <div class="work-with-us__image-wrapper">
-            <img src="@img/work-with-us/trexmer-logo.png" alt="Логотип компании Трехмер." with="137" height="56">
+            <img src="@img/work-with-us/trexmer-logo.png" alt="Логотип компании Трехмер." width="137" height="56">
           </div>
         </li>
       </ul>
