--- a/src/views/pages/templates.j2
+++ b/src/views/pages/templates.j2
@@ -427,13 +427,13 @@
           <div class="section__header">
             <h3 class="section__title">Команда ExaSystems</h3>
             <div class="section__card-swiper-buttons">
-              <button class="section__swiper-button section__swiper-button--prev" id="section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
+              <button class="section__swiper-button section__swiper-button--prev section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
                 <span class="visually-hidden">Перелестнуть назад</span>
               </button>
-              <button class="section__swiper-button section__swiper-button--next" id="section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
+              <button class="section__swiper-button section__swiper-button--next section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
@@ -520,13 +520,13 @@
               </div>
             </div>
             <div class="section__card-swiper-buttons section__card-swiper-buttons--desktop-only">
-              <button class="section__swiper-button section__swiper-button--prev" id="section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
+              <button class="section__swiper-button section__swiper-button--prev section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
                 <span class="visually-hidden">Перелестнуть назад</span>
               </button>
-              <button class="section__swiper-button section__swiper-button--next" id="section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
+              <button class="section__swiper-button section__swiper-button--next section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
@@ -545,13 +545,13 @@
           <div class="section__header">
             <h3 class="section__title">Сертификаты</h3>
             <div class="section__card-swiper-buttons">
-              <button class="section__swiper-button section__swiper-button--prev" id="section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
+              <button class="section__swiper-button section__swiper-button--prev section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
                 <span class="visually-hidden">Перелестнуть назад</span>
               </button>
-              <button class="section__swiper-button section__swiper-button--next" id="section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
+              <button class="section__swiper-button section__swiper-button--next section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
@@ -650,13 +650,13 @@
               </div>
             </div>
             <div class="section__card-swiper-buttons section__card-swiper-buttons--desktop-only">
-              <button class="section__swiper-button section__swiper-button--prev" id="section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
+              <button class="section__swiper-button section__swiper-button--prev section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
                 <span class="visually-hidden">Перелестнуть назад</span>
               </button>
-              <button class="section__swiper-button section__swiper-button--next" id="section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
+              <button class="section__swiper-button section__swiper-button--next section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
@@ -675,13 +675,13 @@
           <div class="section__header">
             <h3 class="section__title">Вендоры</h3>
             <div class="section__card-swiper-buttons">
-              <button class="section__swiper-button section__swiper-button--prev" id="section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
+              <button class="section__swiper-button section__swiper-button--prev section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
                 <span class="visually-hidden">Перелестнуть назад</span>
               </button>
-              <button class="section__swiper-button section__swiper-button--next" id="section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
+              <button class="section__swiper-button section__swiper-button--next section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
@@ -780,13 +780,13 @@
               </div>
             </div>
             <div class="section__card-swiper-buttons section__card-swiper-buttons--desktop-only">
-              <button class="section__swiper-button section__swiper-button--prev" id="section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
+              <button class="section__swiper-button section__swiper-button--prev section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
                 <span class="visually-hidden">Перелестнуть назад</span>
               </button>
-              <button class="section__swiper-button section__swiper-button--next" id="section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
+              <button class="section__swiper-button section__swiper-button--next section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
