оказалось что не все баги с кнопками были пофикшены))

--- a/src/views/blocks/team-swiper.j2
+++ b/src/views/blocks/team-swiper.j2
@@ -4,18 +4,18 @@
       <div class="section__header">
         <h3 class="section__title">Команда ExaSystems</h3>
         <div class="section__card-swiper-buttons">
-          <button class="section__swiper-button section__swiper-button--prev" id="section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
-            <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
-              <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
-            </svg>
-            <span class="visually-hidden">Перелестнуть назад</span>
-          </button>
-          <button class="section__swiper-button section__swiper-button--next" id="section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
-            <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
-              <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
-            </svg>
-            <span class="visually-hidden">Перелестнуть назад</span>
-          </button>
+          <button class="section__swiper-button section__swiper-button--prev section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
+                <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
+                  <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
+                </svg>
+                <span class="visually-hidden">Перелестнуть назад</span>
+              </button>
+              <button class="section__swiper-button section__swiper-button--next section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
+                <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
+                  <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
+                </svg>
+                <span class="visually-hidden">Перелестнуть вперед</span>
+              </button>
         </div>
       </div>
 
@@ -97,18 +97,18 @@
           </div>
         </div>
         <div class="section__card-swiper-buttons section__card-swiper-buttons--desktop-only">
-          <button class="section__swiper-button section__swiper-button--prev" id="section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
-            <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
-              <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
-            </svg>
-            <span class="visually-hidden">Перелестнуть назад</span>
-          </button>
-          <button class="section__swiper-button section__swiper-button--next" id="section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
-            <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
-              <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
-            </svg>
-            <span class="visually-hidden">Перелестнуть назад</span>
-          </button>
+          <button class="section__swiper-button section__swiper-button--prev section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
+                <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
+                  <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
+                </svg>
+                <span class="visually-hidden">Перелестнуть назад</span>
+              </button>
+              <button class="section__swiper-button section__swiper-button--next section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
+                <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
+                  <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
+                </svg>
+                <span class="visually-hidden">Перелестнуть вперед</span>
+              </button>
         </div>
       </div>
     </div>
