--- a/src/views/pages/templates.j2
+++ b/src/views/pages/templates.j2
@@ -294,7 +294,7 @@
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
-                <span class="visually-hidden">Перелестнуть назад</span>
+                <span class="visually-hidden">Перелестнуть вперед</span>
               </button>
             </div>
             <div class="section__text-content">
@@ -437,7 +437,7 @@
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
-                <span class="visually-hidden">Перелестнуть назад</span>
+                <span class="visually-hidden">Перелестнуть вперед</span>
               </button>
             </div>
           </div>
@@ -530,7 +530,7 @@
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
-                <span class="visually-hidden">Перелестнуть назад</span>
+                <span class="visually-hidden">Перелестнуть вперед</span>
               </button>
             </div>
           </div>
@@ -555,7 +555,7 @@
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
-                <span class="visually-hidden">Перелестнуть назад</span>
+                <span class="visually-hidden">Перелестнуть вперед</span>
               </button>
             </div>
           </div>
@@ -660,7 +660,7 @@
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
-                <span class="visually-hidden">Перелестнуть назад</span>
+                <span class="visually-hidden">Перелестнуть вперед</span>
               </button>
             </div>
           </div>
@@ -685,7 +685,7 @@
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
-                <span class="visually-hidden">Перелестнуть назад</span>
+                <span class="visually-hidden">Перелестнуть вперед</span>
               </button>
             </div>
           </div>
@@ -790,7 +790,7 @@
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
-                <span class="visually-hidden">Перелестнуть назад</span>
+                <span class="visually-hidden">Перелестнуть вперед</span>
               </button>
             </div>
           </div>
