--- a/src/views/blocks/other-services.j2
+++ b/src/views/blocks/other-services.j2
@@ -4,17 +4,17 @@
       <div class="section__header">
         <h3 class="section__title">Другие услуги</h3>
         <div class="section__card-swiper-buttons">
-          <button class="section__swiper-button section__swiper-button--prev" id="section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
+          <button class="section__swiper-button section__swiper-button--prev section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
             <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
               <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
             </svg>
             <span class="visually-hidden">Перелестнуть назад</span>
           </button>
-          <button class="section__swiper-button section__swiper-button--next" id="section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
+          <button class="section__swiper-button section__swiper-button--next section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
             <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
               <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
             </svg>
-            <span class="visually-hidden">Перелестнуть назад</span>
+            <span class="visually-hidden">Перелестнуть вперед</span>
           </button>
         </div>
       </div>
@@ -94,17 +94,17 @@
           </div>
         </div>
         <div class="section__card-swiper-buttons section__card-swiper-buttons--desktop-only">
-          <button class="section__swiper-button section__swiper-button--prev" id="section-card-swiper-{{sectionCardSwiperCnt}}-prev-desktop" type="button">
+          <button class="section__swiper-button section__swiper-button--prev section-card-swiper-{{sectionCardSwiperCnt}}-prev" type="button">
             <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
               <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
             </svg>
             <span class="visually-hidden">Перелестнуть назад</span>
           </button>
-          <button class="section__swiper-button section__swiper-button--next" id="section-card-swiper-{{sectionCardSwiperCnt}}-next-desktop" type="button">
+          <button class="section__swiper-button section__swiper-button--next section-card-swiper-{{sectionCardSwiperCnt}}-next" type="button">
             <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
               <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
             </svg>
-            <span class="visually-hidden">Перелестнуть назад</span>
+            <span class="visually-hidden">Перелестнуть вперед</span>
           </button>
         </div>
       </div>
