--- a/src/views/pages/service-template.j2
+++ b/src/views/pages/service-template.j2
@@ -57,7 +57,7 @@
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
-                <span class="visually-hidden">Перелестнуть назад</span>
+                <span class="visually-hidden">Перелестнуть вперед</span>
               </button>
             </div>
           </div>
@@ -162,7 +162,7 @@
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
-                <span class="visually-hidden">Перелестнуть назад</span>
+                <span class="visually-hidden">Перелестнуть вперед</span>
               </button>
             </div>
           </div>
@@ -288,7 +288,7 @@
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
-                <span class="visually-hidden">Перелестнуть назад</span>
+                <span class="visually-hidden">Перелестнуть вперед</span>
               </button>
             </div>
           </div>
@@ -393,7 +393,7 @@
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
-                <span class="visually-hidden">Перелестнуть назад</span>
+                <span class="visually-hidden">Перелестнуть вперед</span>
               </button>
             </div>
           </div>
@@ -419,7 +419,7 @@
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
-                <span class="visually-hidden">Перелестнуть назад</span>
+                <span class="visually-hidden">Перелестнуть вперед</span>
               </button>
             </div>
           </div>
@@ -512,7 +512,7 @@
                 <svg class="section__swiper-button-icon" width="12" height="10" viewBox="0 0 12 10">
                   <use xlink:href="img/sprite.svg#swiper-arrow-icon"></use>
                 </svg>
-                <span class="visually-hidden">Перелестнуть назад</span>
+                <span class="visually-hidden">Перелестнуть вперед</span>
               </button>
             </div>
           </div>
