делаю форму с админом

--- a/src/scss/blocks/section.scss
+++ b/src/scss/blocks/section.scss
@@ -560,7 +560,7 @@
   }
 }
 
-.section--with-form {
+.section--with-form-type1 {
   & .section__half {
     @media (min-width: $desktop-width) {
       max-width: 480px;
