--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -80,3 +80,4 @@
 @import "./blocks/service-header.scss";
 @import "./blocks/other-service-card.scss";
 @import "./blocks/other-services-swiper.scss";
+@import "./blocks/admin-cons.scss";
