--- a/src/views/blocks/download-cp.j2
+++ b/src/views/blocks/download-cp.j2
@@ -1,4 +1,4 @@
-<section class="section section--with-form section--with-paddings">
+<section class="section section--with-form-type1 section--with-paddings">
   <div class="container">
     <div class="section__content section__content--with-big-img">
       <div class="section__half">
