--- a/src/views/pages/service-template.j2
+++ b/src/views/pages/service-template.j2
@@ -271,6 +271,8 @@
       </div>
     </section>
 
+    {% include "./blocks/admin-cons.j2" %}
+
     {# Вендоры #}
     <section class="vendors section section--with-paddings">
       <div class="container">
@@ -636,6 +638,7 @@
   <script src="./js/macy.min.js"></script>
   <script src="./js/cases.min.js"></script>
   <script src="./js/modal-image.min.js"></script>
+  <script src="./js/admin-cons.min.js"></script>
   <script src="./js/download-cp.min.js"></script>
   <script src="./js/main.min.js"></script>
 {% endblock %}
