--- a/src/scss/blocks/admin-cons.scss
+++ b/src/scss/blocks/admin-cons.scss
@@ -17,6 +17,10 @@
   @media (min-width: $tablet-width) {
     height: 500px;
   }
+
+  @media (min-width: $desktop-width) {
+    height: 100%;
+  }
 }
 
 .admin-cons__photo {
@@ -57,5 +61,11 @@
 
   @media (max-width: $max-tablet-width) {
     color: #bbbbbc;
+  }
+}
+
+.admin-cons__form {
+  @media (min-width: $desktop-width) {
+    max-width: 380px;
   }
 }
