--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -27,6 +27,7 @@
 @import "./blocks/modal-image.scss";
 @import "./blocks/swiper.scss";
 @import "./blocks/section-title.scss";
+@import "./blocks/messenger.scss";
 //
 @import "./blocks/page.scss";
 @import "./blocks/page-header.scss";
