--- a/src/scss/blocks/modal.scss
+++ b/src/scss/blocks/modal.scss
@@ -76,7 +76,7 @@
   font-weight: 500;
   font-size: 30px;
   line-height: 110%;
-  font-family: "Jost", "Arial", sans-serif;
+  font-family: $jost-font;
   color: $black-color;
 }
 
