--- a/src/scss/blocks/services-solutions.scss
+++ b/src/scss/blocks/services-solutions.scss
@@ -83,7 +83,7 @@
   font-weight: 500;
   font-size: 23px;
   line-height: 28px;
-  font-family: "Jost", "Arial", sans-serif;
+  font-family: $jost-font;
   color: $blue-color;
   text-transform: uppercase;
 
