--- a/src/scss/blocks/sharing-exp.scss
+++ b/src/scss/blocks/sharing-exp.scss
@@ -79,7 +79,7 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 115%;
-  font-family: "Jost", "Arial", sans-serif;
+  font-family: $jost-font;
 }
 
 .sharing-exp__article-description {
