--- a/src/views/pages/index.j2
+++ b/src/views/pages/index.j2
@@ -4,6 +4,15 @@
 
 {% block content %}
   <main class="page-main">
+    <div class="index-header section">
+      <div class="container">
+        <div class="index-header__content">
+          <h1 class="index-header__title">Поставляем <span>оборудование</span>, внедряем <span>IT&#8209;решения</span></h1>
+          <button class="button index-header__button rcv-cons-button" type="button">Получить консультацию</button>
+        </div>
+      </div>
+    </div>
+
     <h1 class="visually-hidden">Главная ExaSystems</h1>
     {% include "./blocks/features-under-key.j2" %}
     {% include "./blocks/services.j2" %}
