--- a/src/scss/blocks/blog-article.scss
+++ b/src/scss/blocks/blog-article.scss
@@ -93,7 +93,7 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 23px;
-  font-family: "Jost", "Arial", sans-serif;
+  font-family: $jost-font;
   color: $black-color;
 }
 
