--- a/src/scss/blocks/comparison.scss
+++ b/src/scss/blocks/comparison.scss
@@ -243,7 +243,7 @@
   font-weight: 500;
   font-size: 15px;
   line-height: 115%;
-  font-family: "Jost", "Arial", sans-serif;
+  font-family: $jost-font;
   color: inherit;
   text-decoration: none;
 
@@ -326,7 +326,7 @@
   font-weight: 500;
   font-size: 15px;
   line-height: 115%;
-  font-family: "Jost", "Arial", sans-serif;
+  font-family: $jost-font;
 
   @media (min-width: $desktop-width) {
     font-size: 20px;
