--- a/src/scss/blocks/equipment-card.scss
+++ b/src/scss/blocks/equipment-card.scss
@@ -56,7 +56,7 @@
   font-weight: 500;
   font-size: 24px;
   line-height: 29px;
-  font-family: "Jost", "Arial", sans-serif;
+  font-family: $jost-font;
   color: $white-color;
   text-decoration: none;
 
