--- a/src/scss/blocks/feature.scss
+++ b/src/scss/blocks/feature.scss
@@ -21,7 +21,7 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 115%;
-  font-family: "Jost", "Arial", sans-serif;
+  font-family: $jost-font;
 }
 
 .feature__desription {
