--- a/src/scss/blocks/form-section.scss
+++ b/src/scss/blocks/form-section.scss
@@ -29,7 +29,7 @@
   font-weight: 600;
   font-size: 24px;
   line-height: 35px;
-  font-family: "Jost", "Arial", sans-serif;
+  font-family: $jost-font;
   color: $white-color;
 
   @media (min-width: $tablet-width) {
@@ -78,7 +78,7 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 22px;
-  font-family: "Jost", "Arial", sans-serif;
+  font-family: $jost-font;
   color: $white-color;
 
   @media (min-width: $desktop-width) {
