--- a/src/scss/blocks/menu.scss
+++ b/src/scss/blocks/menu.scss
@@ -112,7 +112,7 @@
     font-weight: 500;
     font-size: 18px;
     line-height: 26px;
-    font-family: "Jost", "Arial", sans-serif;
+    font-family: $jost-font;
     color: inherit;
     text-decoration: none;
 
@@ -236,7 +236,7 @@
   display: flex;
   flex-direction: column;
 
-  font-family: "Jost", "Arial", sans-serif;
+  font-family: $jost-font;
 
   @media (min-width: $desktop-width) {
     display: none;
