--- a/src/scss/blocks/need-help.scss
+++ b/src/scss/blocks/need-help.scss
@@ -32,7 +32,7 @@
   font-weight: 600;
   font-size: 24px;
   line-height: 35px;
-  font-family: "Jost", "Arial", sans-serif;
+  font-family: $jost-font;
   color: $white-color;
 
   @media (min-width: $tablet-width) {
