--- a/src/scss/blocks/product-card.scss
+++ b/src/scss/blocks/product-card.scss
@@ -53,7 +53,7 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 23px;
-  font-family: "Jost", "Arial", sans-serif;
+  font-family: $jost-font;
 
   transition: color 0.3s ease;
 }
@@ -114,7 +114,7 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 23px;
-  font-family: "Jost", "Arial", sans-serif;
+  font-family: $jost-font;
 }
 
 .product-card__credit {
