--- a/src/scss/blocks/reviews.scss
+++ b/src/scss/blocks/reviews.scss
@@ -92,7 +92,7 @@
   display: flex;
   flex-direction: column;
 
-  font-family: "Jost", "Arial", sans-serif;
+  font-family: $jost-font;
 
   gap: 6px;
 }
