--- a/src/scss/blocks/service-card.scss
+++ b/src/scss/blocks/service-card.scss
@@ -87,7 +87,7 @@
   font-weight: 500;
   font-size: 28px;
   line-height: 110%;
-  font-family: "Jost", "Arial", sans-serif;
+  font-family: $jost-font;
 
   transition: color 0.3s ease;
 
