--- a/src/scss/blocks/services.scss
+++ b/src/scss/blocks/services.scss
@@ -137,7 +137,7 @@
   font-weight: 600;
   font-size: 18px;
   line-height: 120%;
-  font-family: "Jost", "Arial", sans-serif;
+  font-family: $jost-font;
 
   @media (min-width: $tablet-width) {
     margin-top: 30px;
