--- a/src/scss/blocks/title.scss
+++ b/src/scss/blocks/title.scss
@@ -6,7 +6,7 @@
   font-weight: 600;
   font-size: 24px;
   line-height: 110%;
-  font-family: "Jost", "Arial", sans-serif;
+  font-family: $jost-font;
   color: $black-color;
 
   @media (min-width: $desktop-width) {
