--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,7 @@
 @import "./vendor/choices/choices.min.scss";
 @import "./vendor/swiper/swiper-bundle.scss";
 //
+@import "./blocks/sticky-header.scss";
 @import "./blocks/visually-hidden.scss";
 @import "./blocks/container.scss";
 @import "./blocks/tabs.scss";
