сделал сайд панель, но не настроил кнопки модалок

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,7 +7,6 @@
 @import "./vendor/choices/choices.min.scss";
 @import "./vendor/swiper/swiper-bundle.scss";
 //
-@import "./blocks/sticky-header.scss";
 @import "./blocks/visually-hidden.scss";
 @import "./blocks/container.scss";
 @import "./blocks/tabs.scss";
@@ -29,6 +28,7 @@
 @import "./blocks/swiper.scss";
 @import "./blocks/section-title.scss";
 @import "./blocks/messenger.scss";
+@import "./blocks/side-panel.scss";
 //
 @import "./blocks/page.scss";
 @import "./blocks/page-header.scss";
