--- a/src/views/layout.j2
+++ b/src/views/layout.j2
@@ -19,6 +19,7 @@
   {% include "footer.j2" %}
 
 
+  {% include "./blocks/side-panel.j2" %}
   {% include "./blocks/modal.j2" %}
   {% include "./blocks/modal-order.j2" %}
   {% block modal %}{% endblock %}
@@ -28,6 +29,7 @@
   <script src="./js/choices.min.js"></script>
   <script src="./js/imask.js"></script>
   <script src="./js/modal.min.js"></script>
+  <script src="./js/side-panel.min.js"></script>
   <script src="./js/menu.min.js"></script>
   {% block js %}{% endblock %}
 </body>
