--- a/src/views/pages/service-template.j2
+++ b/src/views/pages/service-template.j2
@@ -624,7 +624,7 @@
     {% set sectionCardSwiperCnt = sectionCardSwiperCnt + 1 %}
     {% include "./blocks/download-cp.j2" %}
     {% include "./blocks/other-services.j2" %}
-
+    {# {% include "./blocks/side-panel.j2" %} #}
   </main>
 {% endblock content %}
 
